<resources>
    <string name="app_name">Hillfort</string>
    <string name="hint_hillfortTitle">Hillfort Title</string>
    <string name="hint_hillfortDescription">Description </string>
    <string name="hint_hillfortNotes">Additional Notes</string>
    <string name="enter_hillfort_title"> Please enter a Hillfort Title </string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="button_delete">Delete</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="menu_deleteHillfort">Delete</string>
    <string name="menu_addHillfort">Add</string>
    <string name="menu_settings">Settings</string>
    <string name="change_hillfort_image">Add hillfort image</string>
    <string name="save_hillfort"> Save Hillfort </string>
    <string name="select_hillfort_image">Select hillfort image</string>
    <string name="button_addImage"> Add Image </string>
    <string name="location_heading">Location</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_hillfort_maps">Map</string>
    <string name="splash_message">Hillforts</string>
    <string name="checkbox_message">"Visited?"</string>
    <string name="button_chooseSignUp">Sign Up</string>
    <string name="button_chooseLogin">Log In</string>
    <string name="welcome_message">Welcome to Hillfort!</string>
    <string name="signup_message">Sign Up</string>
    <string name="login_message">Log In</string>
    <string name="hint_signup_email">Email Address</string>
    <string name="hint_signup_password">Password</string>
    <string name="button_signUp">Sign Up</string>
    <string name="button_login">Login</string>
    <string name="hint_login_email">Email Address</string>
    <string name="hint_login_password">Password</string>
    <string name="signup_failed">Email is already registered.</string>
    <string name="login_failed">Login Failed. Incorrect email or password.</string>
    <string name="settings_message">User Settings</string>
    <string name="stats_message">User Stats</string>
    <string name="button_update">Update</string>
    <string name="update_failed">Email is already registered.</string>
    <string name="menu_up">Up</string>
    <string name="menu_saveHillfort">Save</string>
    <string name="hillfortPicture">Hillfort Image</string>
    <string name="hillfortTitle">Hillfort Title</string>
    <string name="hillfortDescription">Hillfort Description</string>
    <string name="title_activity_hillfort_list">Hillforts</string>
    <string name="title_activity_hillfort">Hillfort</string>
    <string name="title_activity_location">Hillfort</string>
    <string name="title_activity_login"> Signup/Login to Hillfort</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_showFavourites">Favourites</string>
    <string name="menu_logout">Logout</string>
    <string name="email_address">Email Address</string>
    <string name="password">Update Password</string>
    <string name="latvalue">00.000000</string>
    <string name="lngvalue">00.000000</string>
    <string name="favouritebutton">favouritebutton</string>
    <string name="title_activity_favourite_view">Favourites</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search">Search</string>
    <string name="menu_shareHillfort">Share</string>

</resources>